<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chatpass.me</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Chatpass.me</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="create">Create</string>
    <string name="convos">Convos</string>
    <string name="profile">Profile</string>
    <string name="whistle_photo">Whistle Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="send">Send</string>
    <string name="comments">Comments</string>
    <string name="create_question_hint">Post A Whistle</string>
    <string name="create_answer_hint_1">Clik 1</string>
    <string name="create_answer_hint_2">Clik 2</string>
    <string name="create_answer_hint_3">Clik 3 (optional)</string>
    <string name="create_answer_hint_4">Clik 4 (optional)</string>
    <string name="choose_image">Choose An Image</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="upload">Upload</string>
    <string name="take">Take</string>
    <string name="title_activity_view_whistle">ViewWhistleActivity</string>
    <string name="create_comment">Write A Comment...</string>
    <string name="select_a_pod">Select A Pod</string>
    <string name="title_activity_select_apod">SelectAPodActivity</string>
    <string name="friends">Friends</string>
    <string name="school">School</string>
    <string name="everyone">Everyone</string>
    <string name="report">Report</string>
    <string name="inappropriate">Inappropriate</string>
    <string name="repetitive">Repetitive</string>
    <string name="report_whistle">Report This Whistle</string>
    <string name="minimum_answer_warning">There must be at least 2 clicks</string>
    <string name="whistle_text_warning">You forgot write a question!</string>
    <string name="ok">Ok</string>
    <string name="title_activity_view_other_profile">ViewOtherProfileActivity</string>
    <string name="title_activity_contacts_list">ContactsListActivity</string>
    <string name="invite_contacts">Invite Contacts</string>
    <string name="title_activity_add_contacts">AddContactsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="send_invitation">Send Invitation</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="more_info">More Info</string>
    <string name="send_feedback">Click here to send us feedback!</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="community_standards">Community Standards</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="love">LOVE</string>
    <string name="hate">HATE</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="create_button">Create an account</string>
    <string name="welcome_screen">Welcome to Chatpassme</string>
    <string name="continue_button">Continue</string>
    <string name="title_activity_phone_number_screen">PhoneNumberScreen</string>
    <string name="title_activity_verification_screen">VerificationScreen</string>
    <string name="enter_verification_number">Enter verification number</string>
    <string name="title_activity_create_profile">CreateProfile</string>
    <string name="enter_first_name">Enter your first name here.</string>
    <string name="enter_last_name">Enter your last name here.</string>
    <string name="title_activity_contact_page">ContactPage</string>
    <string name="skip_button">Skip</string>
    <string name="add_contacts_button">Add</string>
    <string name="title_activity_schools_page">SchoolsPage</string>
    <string name="find_school">Search your school</string>
    <string name="enter_school_name">Enter school name here</string>
    <string name="list_schools">List of Schools</string>
    <string name="title_activity_confirm_age">ConfirmAge</string>
    <string name="confirmation">Confirm</string>
    <string name="title_activity_choose_grade">ChooseGrade</string>
    <string name="choose_grade">Choose your grade</string>
    <string name="ninth_grade">9th grade</string>
    <string name="tenth_grade">10th grade</string>
    <string name="eleventh_grade">11th grade</string>
    <string name="twelfth_grade">12th grade</string>
    <string name="title_activity_confirm_grade">ConfirmGrade</string>
    <string name="confirm_grade">Confirm you are in xth grade</string>
    <string name="enter_number">Enter number here</string>
    <string name="the_one">+1</string>
    <string name="please_enter_number">Please enter your mobile number</string>
    <string name="receive_confirmation">You will receive a text with a confirmation code</string>
    <string name="access_code">An access code has been sent to you via text</string>
    <string name="enter_access_code">Enter your access code</string>
    <string name="no_confirmation_code">If you do not receive an access code within 60 seconds, press the \"No Code?\" button</string>
    <string name="chatpassme_logo">Chatpassme Logo</string>
    <string name="empty_face">emptyface</string>
    <string name="no_code">No Code?</string>
    <string name="select_grade">SELECT YOUR GRADE</string>
    <string name="choose_school">CHOOSE YOUR SCHOOL</string>
    <string name="enter_birthday">Enter your birthday</string>
    <string name="title_activity_choose_photo_type">ChoosePhotoType</string>
    <string name="choose_photo_type">Choose your profile picture</string>
    <string name="choose_existing_photo">Go to photos</string>
    <string name="take_photo">Take a new photo</string>
    <string name="title_activity_photo_handler">PhotoHandler</string>
    <string name="title_activity_take_photo">TakePhoto</string>
    <string name="capture">Capture</string>
    <string name="title_activity_troll_page">TrollPage</string>
    <string name="troll">Welcome to the Troll page!</string>
    <string name="month">mm</string>
    <string name="day">dd</string>
    <string name="year">yyyy</string>
    <string name="title_activity_decision">Chatpassme</string>
    <string name="TAC">By creating an account you acknowledge that you have read and accept our Terms of Service, Community Standards and Privacy Policy.</string>
    <string name="description">The mobile network for high schoolers</string>

</resources>