<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/send_feedback"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="@string/send_feedback" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_info"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/terms_of_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_of_service" />

    <Button
        android:id="@+id/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy" />

    <Button
        android:id="@+id/community_standards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/community_standards" />

</LinearLayout>
