<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/fragment_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nav_bar" >
    </FrameLayout>

    <LinearLayout
        android:id="@+id/nav_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <ImageButton
            android:id="@+id/home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/home"
            android:onClick="loadHomeFragment"
            android:src="@drawable/ic_tab_home" />

        <ImageButton
            android:id="@+id/contacts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/contacts"
            android:onClick="loadContactsFragment"
            android:src="@drawable/ic_tab_contacts" />

        <ImageButton
            android:id="@+id/create"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/create"
            android:onClick="loadCreateFragment"
            android:src="@drawable/ic_tab_create" />

        <ImageButton
            android:id="@+id/convos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/convos"
            android:onClick="loadConvosFragment"
            android:src="@drawable/ic_tab_convos" />

        <ImageButton
            android:id="@+id/profile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile"
            android:onClick="loadProfileFragment"
            android:src="@drawable/ic_tab_profile" />
    </LinearLayout>

</RelativeLayout>